# stack_all

./: Dockerfile  LICENSE  README.txt  run_hoogle.sh  stack.cabal  stack.hs  stack.repo  stack_all.sh  stack_all_internal.sh  volume_setup.sh
